--- a/src/main/webapp/app/js/tests/app/GEOB_config.html
+++ b/src/main/webapp/app/js/tests/app/GEOB_config.html
@@ -5,12 +5,12 @@
     <script type="text/javascript" src="../../../../lib/externals/ext/adapter/ext/ext-base.js"></script>
     <script type="text/javascript" src="../../../../lib/externals/ext/ext-all-debug.js"></script>
 
-    <script type="text/javascript" src="../../GEOB_config.js"></script>
+    <script type="text/javascript" src="../../GEOR_config.js"></script>
     <script type="text/javascript">
     function test_GetBaseURL(t) {
         t.plan(10);
 
-        var url, base, o = GEOB.config;
+        var url, base, o = GEOR.config;
 
         url = "http://foo.bar/foo/bar";
         base = o._getBaseURL(url);
@@ -73,7 +73,7 @@
     function test_GetAbsoluteBaseURL(t) {
         t.plan(8);
 
-        var url, base, o = GEOB.config;
+        var url, base, o = GEOR.config;
 
         url = "http://foo.bar/mapfishapp/foo/bar";
         base = o._getAbsoluteBaseURL(url);
@@ -120,7 +120,7 @@
     function test_GetAppURL(t) {
         t.plan(3);
 
-        var url, base, o = GEOB.config;
+        var url, base, o = GEOR.config;
 
         url = "http://foo.bar/foo/bar";
         base = o._getAppURL(url);
